kubernetes-networks/canary/02-canary-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-svc
spec:
  replicas: 3
  selector:
    matchLabels:
      app: canary-svc
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  template:
    metadata:
      name: canary-svc
      labels:
        app: canary-svc
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.8
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: canary-svc
spec:
  clusterIP: None
  selector:
    app: canary-svc
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
