kubernetes-networks/canary/04-canary-svc-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: canary-service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "X-Canary-Header"
spec:
  rules:
  - http:
      paths:
      - path: /service
        backend:
          serviceName: canary-svc
          servicePort: 8080
